
      - index items now have an 'index title' attribute in addition to an 
        'anchor name' attribute. The title is used for displaying in an 
        indexer. The name is used for the anchor, and thus should be a valid
        anchor name.
        
        If no title is given, the index is considered a 'pure' anchor, and
        will not be found by Indexers.

    Ported from 1.5 branch

      - Non Ascii characters in names or values of codesource paramaters
        no longer result in errors.

      - Incorrect links entered by hand or imported broke the path adapter.
        Since this made editing the document impossible, I added some 
        defensive code.

      - Anchors around divs break in explorer, so they were put inside in 
        the xslt renderer.

Silva 1.6b4

    Bugs fixed:

      - New version of SilvaMetadata (0.12) released which fixes a bug
        where storing of empty metadata fields/deleting metadata values was
        impossible.

Silva 1.6b3 (first public beta)

    Features added

      - Assets now have a version_status method that always returns 'public'
        which means they can be found by SilvaFind.

      - Old version cleanup code was made more robust and can now be
        used to delete all old versions older than a certain date, 
        instead of just all old versions. 

      - Silva now uses ZCML for registration of Silva extensions and
        the content types they define. See doc/extension.txt for more
        information. See also doc/developer_changes.txt.

      - The Version/CatalogedVersion base class does not expect a
        title argument anymore. This title argument had been unused
        for a long time. This requires minor adjustments in some subclasses
        of Version and CatalogedVersion. For more information see
        doc/developer_changes.txt.

      - Much i18n polishing.

      - Made image titles required, since they provide the alt attribute.
